--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,7 @@ body {
 
 #navbarSupportedContent {
   width: 100%;
-  background-color: #f9ece6;
+  background-color: #ffffff;
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
@@ -83,6 +83,7 @@ body {
   border-radius: 10px;
   -webkit-box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.25);
   box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.25);
+  margin-bottom: 20px;
 }
 
 #navbarSupportedContent.innerpage_navbar .nav-item.active .nav-link {
