--- a/css/style.scss
+++ b/css/style.scss
@@ -103,7 +103,7 @@ body {
 
 #navbarSupportedContent {
   width: 100%;
-  background-color: #f9ece6;
+  background-color: #ffffff;
   justify-content: center;
   padding: 10px 0;
   border-radius: 15px 15px 0 0;
@@ -112,6 +112,8 @@ body {
     background-color: white;
     border-radius: 10px;
     box-shadow: 0 0 3px 0 rgba($color: #000000, $alpha: .25);
+    margin-bottom: 20px;
+
 
     .nav-item.active {
       .nav-link {
