--- a/css/style.css
+++ b/css/style.css
@@ -873,5 +873,22 @@ a:focus {
   color: #cbc9c9;
 }
 
+.cart-button {
+  background-color: #db4f66;
+  color: #ffffff;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  font-size: 16px;
+  font-weight: 500;
+  width: 100%;
+}
+
+.card-img {
+  width: 100%;
+  height: 300px;
+  object-fit: contain;
+}
+
 /* end footer section*/
 /*# sourceMappingURL=style.css.map */
